Change Docker Username

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t Daniel-Stojanovski/app:latest .
+        run: docker build -t danieldann/app:latest .
 
       - name: Push Docker image to Docker Hub
-        run: docker push Daniel-Stojanovski/app:latest
+        run: docker push danieldann/app:latest
