--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,15 @@ services:
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/mydb
       SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: maky123
+      SPRING_DATASOURCE_PASSWORD: postgres
     depends_on:
       - db
 
   db:
-    image: postgres:15
+    image: postgres:16
     environment:
       POSTGRES_DB: mydb
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: maky123
+      POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
