--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=app
-spring.datasource.url=jdbc:postgresql://db:5432/mydb
+spring.datasource.url=jdbc:postgresql://localhost:5432/kii
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
